platform_versioned_docs/version-4.2.0/administer/projects/quotas.mdx
---
title: Manage Quotas
sidebar_label: Quotas
sidebar_position: 3
---

import Flow, { Step } from "@site/src/components/Flow";
import NavStep from "@site/src/components/NavStep";
import Button from "@site/src/components/Button";
import Label from "@site/src/components/Label";
import Link from "@docusaurus/Link";

Quotas allow you to set resource usage and count limits for the project. This works similiarly to Kubernetes `ResourcesQuotas`, but applies across multiple clusters. Quotas can be
defined across the whole project or on a per-user/per-team basis.

:::info Project quotas with multiple virtual clusters
Please be aware that when you create multiple virtual cluster instances, the individually used resources count toward the shared project quota.
:::

## Quotas on Active Resources

You can restrict the number of active instances for our custom instance types. These quotas are suffixed with `.active`. These are enforced during instance creation, but also when a request is received to wake up a sleeping instance.

## Quotas on Template Quotas

You can restrict the number of instances that are using a given template at the same time. By selecting the instance (e.g. `virtualclusterinstances`), a template dropdown will automatically appear to select what template to restrict. These are enforced during instance creation.

## Quotas on Generic Resources

Quotas can also specify limits on generic resources such as `count/pods` and `limits.cpu` in a similar way to a normal Kubernetes `ResourceQuota` object, but the limits apply to the scope of the project.

:::info On Cluster Resource limits
Custom resources such as `virtualclusterinstances` can be instantly enforced as soon as consumption exceeds the limit, but on-cluster resources such as `limits.cpu` cannot be immediately enforced to avoid blocking requests for a long time.
Users may be able to exceed the quota by small amounts by simultaneously creating resources on multiple clusters.
:::

## Adding Quotas for the Project

<Flow id="create-project-quota-ui">
  <Step>
    Select the project you'd like to configure using the drop down menu. Click on <Label>Settings</Label>.
  </Step>
  <Step>
    Click on <NavStep>Quotas</NavStep>.
  </Step>
  <Step>
    Select the <Label>Per Project</Label> tab.
  </Step>
  <Step>
    Click on the <Button>Add Quota</Button>. An entry in the quota table will
    appear.
  </Step>
  <Step>
    For the <Label>Resource</Label> column, select the desired resource to add a quota. If you wish to change this manually, you may edit the YAML directly.
  </Step>
  <Step>
    For the <Label>Quota</Label> column, enter a number or use the step selector
    to increase or decrease to the desired count.
  </Step>
  <Step>
    Once all project options have been specified, click the{" "}
    <Button>Save Changes</Button>.
  </Step>
</Flow>

## Adding Quotas for a User/Team

When using a quota for a user or team, it applies to **all** users or teams in the project and cannot
be applied to specific users and teams. For example, this project defines a total virtual cluster instance quota of 20, but
prevents any user or team from using more than 5 virtual cluster. By adjusting these quotas, you can ensure that no user or
team uses more than their fair share of cluster resources.

<Flow id="create-project-quota-team-ui">
  <Step>
    Select the project you'd like to configure using the drop down menu. Click on <Label>Settings</Label>.
  </Step>
  <Step>
    Click on <NavStep>Quotas</NavStep>.
  </Step>
  <Step>
    Select the <Label>Per User / Team</Label> tab.
  </Step>
  <Step>
    Click on the <Button>Add Quota</Button>. An entry in the quota table will
    appear.
  </Step>
  <Step>
    For the <Label>Resource</Label> column, select the desired resource to add a quota. If you wish to change this manually, you may edit the YAML directly.
  </Step>
  <Step>
    For the <Label>Quota</Label> column, enter a number or use the step selector
    to increase or decrease to the desired count.
  </Step>
  <Step>
    Once all project options have been specified, click the{" "}
    <Button>Save Changes</Button>.
  </Step>
</Flow>

:::note Team and Team Member Quotas
If a team is the owner of a space or virtual cluster, the usage will be counted by the team and not count against
each member of the team, nor will the usage of a team member count towards the team's quota.
:::

## Exceeding Quotas

Once quotas are defined, users and teams are free to create resources up to the defined limits. However, once the usage meets the limit, attempts to create new resources will be rejected with an error message indicating the resource type and limit
that would be exceeded. Here are examples of possible error messages:

```
Error: metadata.name: Forbidden: cannot create spaceinstance, because project spaceinstances limit of 5 would be exceeded
Error: metadata.name: Forbidden: cannot create spaceinstance, because per-user spaceinstances limit of 5 would be exceeded
Error: metadata.name: Forbidden: cannot create virtualclusterinstance, because project virtualclusterinstances limit of 5 would be exceeded
Error: metadata.name: Forbidden: cannot create virtualclusterinstance, because per-user virtualclusterinstances limit of 5 would be exceeded
```

:::info Changing Quotas
In order to avoid these errors in practice, quotas may be increased. Decreasing quotas, on the other hand, will not
result in resources being automatically deleted. If you decrease quotas, resources will most likely exceed limits unless specifically cleaned up.
:::
